@@ -3,6 +3,7 @@ Changes for Labyrinth-Plugin-Survey
 
         - list of courses/talks should not be based on room allocation.
         - added filters to only send feedback for specific talk types.
+        - use actuserid to find user before name.
 
 0.05	2014-09-13
         - reworked survey sorting.
